--- a/app/views/mine/_sub_nav.html.erb
+++ b/app/views/mine/_sub_nav.html.erb
@@ -1,11 +1,11 @@
 <% sub_menu = {
-     "wine_follows"     => "wine_follows",
-     "winery_follows"   => "winery_follows",
-     "comments"  => "comments",
-     "testing_notes"  => "testing_notes",
-     "user_follows"     => "user_follows",
-     "user_followers"    => "user_followers",
-     "albums"           => "albums" } %>
+     "wine_follows"     => ["wine_follows", @user.wine_follows_count],
+     "winery_follows"   => ["winery_follows", @user.wine_follows_count],
+     "comments"  => ["comments", @user.comments_count],
+     # "testing_notes"  => ["testing_notes", 0],
+     "followings"     => ["followings", @user.user_followes_count],
+     "followers"    => ["followers", @user.user_followeds_count],
+     "albums"           => ["albums", @user.albums_count] } %>
 
 <div id="cu_user_menu" class="clearfix relative">
   <div class="user_info">
@@ -16,7 +16,7 @@
                        :avatar_version => :large %>
 
     </div>
-     <%= link_to "我的酒窖", "/mine/cellars", :class => "block button absolute" %>
+     <%= link_to "我的酒窖", mine_cellars_path, :class => "block button absolute" %>
     <div class="text_info">
       <%= render "mine/share/user_info" %>
     <!-- user_info end -->
@@ -28,13 +28,13 @@
       <% sub_menu.each do |action_name, url| %>
         <% if action == action_name %>
           <li  class="current" >
-            <%= link_to "2" , url %> <br />
-            <%= link_to t("nav.sub_nav.mine.#{action_name}"),  url %>
+            <%= link_to url[1] , url[0] %> <br />
+            <%= link_to t("nav.sub_nav.mine.#{action_name}"),  url[0] %>
           </li>
         <% else %>
           <li>
-            <%= link_to "2" , url %> <br />
-            <%= link_to t("nav.sub_nav.mine.#{action_name}"), url %>
+            <%= link_to url[1] , url[0] %> <br />
+            <%= link_to t("nav.sub_nav.mine.#{action_name}"), url[0] %>
           </li>
         <% end %>
       <% end %>
