--- a/app/views/mine/_sub_nav.html.erb
+++ b/app/views/mine/_sub_nav.html.erb
@@ -5,7 +5,7 @@
      # "testing_notes"  => ["testing_notes", 0],
      "followings"     => ["followings", @user.user_followes_count],
      "followers"    => ["followers", @user.user_followeds_count],
-     "albums"           => ["albums", @user.albums_count] } %>
+     "albums"           => ["albums/", @user.albums_count] } %>
 
 <div id="cu_user_menu" class="clearfix relative">
   <div class="user_info">
