--- a/app/views/mine/albums/photo.html.erb
+++ b/app/views/mine/albums/photo.html.erb
@@ -5,7 +5,7 @@
     </div>
     <div class="mb20">
       <div class="btn_action">
-        <a href="<%= url_for :action => 'show', :album_id => @album.id %>" class="btn_gray">
+        <a href="<%=  %><%= url_for :action => 'show', :album_id => @album.id %>" class="btn_gray">
           <span>返回该相册</span>
         </a>
       </div>
