--- a/app/views/mine/albums/upload_list.html.erb
+++ b/app/views/mine/albums/upload_list.html.erb
@@ -24,7 +24,7 @@
   <% end %>
   <div class="clear"></div>
 </div>
-<input type="hidden" name="album_id" value="<%= params[:album_id] %>"/>
+<input type="hidden" name="id" value="<%= params[:id] %>"/>
 <input type="hidden" name="deleted_ids" id="deleted_photo_ids"/>
 <div class="align_c"><a href="javascript:save();" class="button_gray"><span>保存</span></a></div>
 <% end %>
