--- a/app/views/mine/albums/upload.html.erb
+++ b/app/views/mine/albums/upload.html.erb
@@ -77,7 +77,7 @@
 
       hidden_field = document.createElement( 'input' );
       hidden_field.type = 'hidden';
-      hidden_field.name = 'album_id';
+      hidden_field.name = 'id';
       hidden_field.value = upload_params.album_id;
       form.appendChild( hidden_field );
 
