--- a/app/views/mine/albums/photo.html.erb
+++ b/app/views/mine/albums/photo.html.erb
@@ -48,7 +48,7 @@
     </div>
       <div class="comment">
     <a href="#add_comment" onclick="$('#photo_comment_comment').focus();" class="button_gray float_r"><span>添加评论</span></a><h3>评论</h3>
-    <div class="comment_list">
+    <div class="comment" style="display: none">
       <ul>
         <% @photo_comments.each do |comment| %>
         <li class="clearfix">
@@ -79,7 +79,7 @@
         <% end %>
       </ul>
       <div class="comment_form mt20">
-        <%= form_for @photo_comment, :url => '/users/albums/photo_comment' do |f| %>
+        <%= form_for @photo_comment, :url => '/mine/albums/photo_comment' do |f| %>
         <input type="hidden" name="photo_comment[photo_id]" value="<%= @photo.id %>" />
         <%= f.hidden_field :reply_id %>
         <div class="user_img">
