Update:  Mine & User
fixed some bugs.

Signed-off-by: Weston <weixuhong@gmail.com>

--- a/app/views/mine/comments.html.erb
+++ b/app/views/mine/comments.html.erb
@@ -8,24 +8,11 @@
 
       <%= render "mine/share/comments" %>
 
-      <!-- pagination start  -->
+	 <!-- pagination start  -->
       <div class="pagination">
-        <nav class="pagination">
-          <span class="page current">1</span>
-          <span class="page">
-            <a href="/mine/conversations?page=2" rel="next">2</a>
-          </span>
-          <span class="next">
-            <a href="/mine/conversations?page=2" rel="next">&gt;</a>
-          </span>
-          <span class="last">
-            <a href="/mine/conversations?page=2">最后</a>
-          </span>
-
-        </nav>
+	 <%= paginate @comments %>
       <!-- pagination  end   -->
       </div>
-
 
       <!-- .box end -->
     </div>
