--- a/app/views/mine/followings.html.erb
+++ b/app/views/mine/followings.html.erb
@@ -3,7 +3,7 @@
   <div class="clear"></div>
   <div class="left">
     <div class="box box_1">
-      <h3>关注的人 <span class="font_12">(共 <%= @followings.total_count %> 人)</span> </h3>
+      <h3>关注的人 <span class="font_12">(共 <%= @user.user_followes_count %> 人)</span> </h3>
       <%= render "mine/share/user_followings" %>
       <div class="clear"></div>
       <!-- pagination start  -->
