--- a/app/views/wine_details/share/_special_comments.html.erb
+++ b/app/views/wine_details/share/_special_comments.html.erb
@@ -1,4 +1,4 @@
-<table border="0" cellspacing="" cellpadding="3">
+<!-- <table border="0" cellspacing="" cellpadding="3">
   <tr>
     <th>评论家</th>
     <th>得分           </th>
@@ -19,4 +19,4 @@
     <td>18/20</td>
     <td>2014-2024</td>
   </tr>
-</table>
+</table> -->
