--- a/app/assets/stylesheets/v2/mine.css.scss
+++ b/app/assets/stylesheets/v2/mine.css.scss
@@ -171,6 +171,16 @@ $h4_font_size: 14px;
             display: block;
             float: left;
         }
+        .user_follows {
+          .middle {
+            .w_100 img {
+              width: 100px;
+            }
+            .w_50 img {
+              width: 50px;
+            }
+          }
+        }
     }
 }
 
@@ -281,4 +291,17 @@ $h4_font_size: 14px;
         }
     }
 
+}
+
+.w_100 {
+  img {
+    width: 100px;
+    height: 100;
+  }
+}
+.w_50 {
+  img {
+    width: 50px;
+    height: 50px;
+  }
 }
