--- a/app/views/mine/share/_favorite_wines.html.erb
+++ b/app/views/mine/share/_favorite_wines.html.erb
@@ -1,12 +1,11 @@
+
 <div class="large_list">
   <%= link_to (image_tag "v2/test/m_w_1.png", :align => "left" ), :controller => "items", :action => "edit", :id => @item %>
   <%= link_to (image_tag "v2/test/m_w_1.png", :align => "left" ), :controller => "items", :action => "edit", :id => @item %>
 </div>
 
-<% if @cellar.items.length > 1 %>
 <div class="small_list">
-<% (2..@cellar.items.length).each do |i| %>
+<% (2..5).each do |i| %>
   <%= link_to (image_tag "v2/test/m_w_2.png", :align => "center"), :controller => "items", :action => "edit", :id => @item %>
 <% end %>
 </div>
-<% end %>
