--- a/app/views/mine/share/_follower_list.html.erb
+++ b/app/views/mine/share/_follower_list.html.erb
@@ -1,8 +1,9 @@
 <div class="middle">
-  <%= link_to (image_tag items[0].follower.avatar,:width => 100, :height => 100 ), :controller => "items", :action => "edit" %>
-  <% if items.length > 1 %>
-    <% (1..( items.length - 1 ) ).each do |i| %>
-      <%= link_to (image_tag items[i].user.avatar, :align => "left", :width => 50, :height => 50 ), :controller => "items", :action => "edit"  %>
-    <% end %>
-  <% end %>
+	<% @followers.map_user.each_with_index do |user, index|%>
+	<% if index > 0 %>
+	 <%= link_to_user user, user_path(user.id, :trailing_slash => true), :with_avatar => true, :avata_version => :thumb, :class => "w_50" %>
+	 <% else %>
+	 <%= link_to_user user, user_path(user.id, :trailing_slash => true), :with_avatar => true, :avata_version => :thumb, :class => "w_100" %>
+	 <% end %>
+	<% end %>	
 </div>
