--- a/app/views/mine/share/_following_wines.html.erb
+++ b/app/views/mine/share/_following_wines.html.erb
@@ -1,12 +1,9 @@
+<% @following_wines.each_with_index do  |comment, index| %>
+<% if index > 1 %>
+<%= link_to wine_cover_tag(comment.commentable, :thumb_name => :w_thumb, :width => 100, :height => 100, :align => "center"), wine_path(comment.commentable.id) %>
+<% else %>
 <div class="large_list">
-  <%= link_to (image_tag "v2/test/m_w_1.png", :align => "left" ), :controller => "items", :action => "edit", :id => @item %>
-  <%= link_to (image_tag "v2/test/m_w_1.png", :align => "left" ), :controller => "items", :action => "edit", :id => @item %>
+  <%= link_to wine_cover_tag(comment.commentable, :thumb_name => :w_thumb, :width => 203, :height => 203, :align => "left"), wine_path(comment.commentable.id) %>
 </div>
-
-<% if @cellar.items.length > 1 %>
-<div class="small_list">
-<% (2..8).each do |i| %>
-  <%= link_to (image_tag "v2/test/m_w_2.png", :align => "center"), :controller => "items", :action => "edit", :id => @item %>
 <% end %>
-</div>
 <% end %>
