--- a/app/views/mine/share/_recommend_users.html.erb
+++ b/app/views/mine/share/_recommend_users.html.erb
@@ -1,9 +1,14 @@
-<% @recommend_users.each do |recommend_user| %>
+<% @recommend_users.each do |user| %>
   <div class="item">
     <div class="pic">
-      <%= link_to (image_tag recommend_user.avatar, :width=>50, :height=>50 , :align => "left" ), :controller => "items", :action => "edit" %>
+	  <%= link_to_user user, 
+		user_path(user.id, :trailing_slash => true), 
+		:with_avatar => true, 
+		:avatar_version => :thumb, 
+		:align => "left", 
+		:class => "w_50" %>
     </div>
-    <h4> <%= recommend_user.username %> </h4>
-    <p><%= link_to_button "follow", "/friends/follow?user_id="+recommend_user.id.to_s %> </p>
+    <h4> <%= user.username %> </h4>
+    <p><%= link_to_button "follow", "/friends/follow?user_id="+user.id.to_s %> </p>
   </div>
 <% end %>
