--- a/app/views/mine/share/_user_followers.html.erb
+++ b/app/views/mine/share/_user_followers.html.erb
@@ -1,10 +1,10 @@
 <!-- 如果是相互关注 -->
-<% @followers.each do |friendship| %>
+<% @followers.map_user.each do |user| %>
   <div class="item">
     <div class="pic">
-      <%= link_to (image_tag friendship.follower.avatar, :width => 50, :height => 50, :align => "left" ), :controller => "items", :action => "edit"%>
+      <%= link_to_user user, user_path(user.id, :trailing_slash => true), :with_avatar => true, :avatar_version => :thumb, :class => "w_50" %>
     </div>
-    <h4> <%= friendship.follower.username %> </h4>
+    <h4> <%= user.username %> </h4>
     <% if current_user.is_following friendship.follower_id %>
       <p> 互相关注 </p>
       <p> <%= link_to "取消关注", '/friends/unfollower?user_id='+friendship.follower_id.to_s %> </p>
