--- a/app/views/mine/share/_wine_follows.html.erb
+++ b/app/views/mine/share/_wine_follows.html.erb
@@ -1,14 +1,15 @@
-<% (1..10).each do |i| %>
+<% @comments.each do |comment| %>
   <div class="item relative dotted">
     <div class="pic">
-      <%= image_tag "v2/test/m_w_3.png", :title => "title", :class => "class" %>
+	 <%= wine_cover_tag comment.commentable, :thumb_name => :w_thumb, :width => 90, :height => 90 %>
     </div>
     <p class="wine_info">
-      <h4> <a href="#"> 2001拉非</a> <br /> <a href="#" class="font_12"> 2001 Carruades de Lafite </a> </h4>
+      <h4>
+	 <%= link_to comment.commentable.cname, wine_path(comment.commentable.id) %><br />
+	 <%= link_to comment.commentable.ename, wine_path(comment.commentable.id), :class => "font_12" %><br />
+	 </h4>
     <p> <%= link_to_icon "red_wine", "/search/{葡萄酒的类型}" %> 红葡萄酒</p>
-    <% 5.times do |i| %>
-      <%= image_tag 'base/star_yellow.jpg', :width=>12, :height=>12 %>
-    <% end %>
+	<%= star_rate_tag(comment.point) %>
     </p>
 
     <%= link_to_icon "delete", "/", :style => "display: none", :class => "delete" %>
