--- a/app/views/mine/wine_follows.html.erb
+++ b/app/views/mine/wine_follows.html.erb
@@ -4,26 +4,14 @@
 
   <div class="left">
     <div class="box box_1">
-      <h3>关注的酒 <span class="font_12">(共 12 支)</span> </h3>
+      <h3>关注的酒 <span class="font_12">(共 <%= @user.wine_follows_count %> 支)</span> </h3>
 
       <%= render "mine/share/wine_follows" %>
 
 
       <!-- pagination start  -->
       <div class="pagination">
-        <nav class="pagination">
-          <span class="page current">1</span>
-          <span class="page">
-            <a href="/mine/conversations?page=2" rel="next">2</a>
-          </span>
-          <span class="next">
-            <a href="/mine/conversations?page=2" rel="next">&gt;</a>
-          </span>
-          <span class="last">
-            <a href="/mine/conversations?page=2">最后</a>
-          </span>
-
-        </nav>
+	 <%= paginate @comments %>
       <!-- pagination  end   -->
       </div>
 
