--- a/app/views/share/_user_fragment.html.erb
+++ b/app/views/share/_user_fragment.html.erb
@@ -3,17 +3,15 @@
 
   <ul class="user_nav">
     <li class="user_center">
-      <%= link_to_user current_user, { :controller => "/mine" }, {:class => "avatar", :with_avatar => true, :avatar_version => :thumb }  %>
+      <%= link_to_user current_user, { :controller => "/mine/"}, {:class => "avatar", :with_avatar => true, :avatar_version => :thumb }  %>
       <%= link_to_icon "arrow_down", "#" %>
       <ul class="drop_down_menu">
-        <li><%= link_to "设置", basic_settings_path() %></li>
-        <li><%= link_to "找朋友", :controller => "/friends", :action => "find" %></li>
-        <li><%= link_to "我的Patrick", :controller => "/mine" %></li>
+        <li><%= link_to "设置", basic_settings_path %></li>
+        <li><%= link_to "找朋友", "/friends/find" %></li>
+        <li><%= link_to "我的Patrick", "/mine/" %></li>
         <li><%= link_to "我的酒窖", :controller => "/mine", :action => "cellars" %></li>
-                <li><%= link_to "私信", :controller => "/mine/conversations" %></li>
-
+        <li><%= link_to "私信", mine_conversations_path %></li>
         <li><%= link_to "登出",  logout_path %></li>
-
       </ul>
     </li>
     <li class="user_add">
