Fix: url errors
Signed-off-by: Weston <weixuhong@gmail.com>

--- a/app/views/mine/_sub_nav.html.erb
+++ b/app/views/mine/_sub_nav.html.erb
@@ -1,21 +1,25 @@
 <% if params[:controller].include? "mine" %>
 <% sub_menu = {
+	 "wine_favorite"     => [mine_cellar_path(@user.cellar.id), @user.wine_cellar_count],
      "wine_follows"     => ["/mine/wine_follows", @user.wine_follows_count],
      "winery_follows"   => ["/mine/winery_follows", @user.wine_follows_count],
      "comments"  => ["/mine/comments", @user.comments_count],
      # "testing_notes"  => ["testing_notes", 0],
      "followings"     => ["/mine/followings", @user.user_followes_count],
-     "followers"    => ["/mine/followers", @user.user_followeds_count],
-     "albums"           => ["/mine/albums", @user.albums_count] } %>
+     "followers"    => ["/mine/followers", @user.user_followeds_count]
+   #  "albums"           => ["/mine/albums", @user.albums_count] 
+} %>
 <% else %>
 <% sub_menu = {
+	"wine_favorite"     => [user_cellar_path(@user.cellar.id), @user.wine_cellar_count],
      "wine_follows"     => [wine_follows_user_path(@user.id), @user.wine_follows_count],
      "winery_follows"   => [winery_follows_user_path(@user.id), @user.wine_follows_count],
      "comments"  => [comments_user_path(@user.id), @user.comments_count],
      # "testing_notes"  => ["testing_notes", 0],
      "followings"     => [followings_user_path(@user.id), @user.user_followes_count],
-     "followers"    => [followers_user_path(@user.id), @user.user_followeds_count],
-     "albums"           => [user_albums_path(@user.id), @user.albums_count] } %>
+     "followers"    => [followers_user_path(@user.id), @user.user_followeds_count]
+     #"albums"           => [user_albums_path(@user.id), @user.albums_count]
+ } %>
 <% end %>
 
 <div id="cu_user_menu" class="clearfix relative">
