--- a/app/views/wine_details/owners.html.erb
+++ b/app/views/wine_details/owners.html.erb
@@ -19,13 +19,12 @@
     <div class="clear"></div>
 
     <div class="box comments">
-      <%= render "wine_details/share/comments" %>
+      <%= render "wine_details/share/owners" %>
     </div>
     <div class="clear"></div>
 
   <div class="pagination">
-<%= paginate @comments %>
-
+<%= paginate @owners %>
   </div>
     <!-- left end -->
   </div>
