--- a/app/views/wine_details/show.html.erb
+++ b/app/views/wine_details/show.html.erb
@@ -36,12 +36,12 @@
       <%= render "wine_details/share/photos" %>
     </div>
     <div class="clear"></div>
-
+<!--
     <div class="box likers">
-      <%= render "wine_details/share/likers" %>
+      <%#= render "wine_details/share/likers" %>
     </div>
     <div class="clear"></div>
-
+-->
     <div class="box comments">
       <%= render "wine_details/share/comments" %>
     </div>
