--- a/app/assets/stylesheets/v2/cellar.css.scss
+++ b/app/assets/stylesheets/v2/cellar.css.scss
@@ -1,64 +1,240 @@
-#cellar{
-  .step {margin: 0 0 40px 0;}
-  .search {
-    input {width:250px;}
+#cellar {
+  .step {
+    margin: 0 0 40px 0;
   }
+  .search {
+    input {
+      width: 250px;
+    }
+
+  }
+
 }
-.step_fir, .step_sec, .step_thr {background:url(../common/step_cellar_addwine.jpg) no-repeat;height:40px;}
-.step{
-  .step_fir {background-position:0 0;}
-  .step_sec {background-position:0 -40px;}
-  .step_thr {background-position:0 -80px;}
+.step_fir, .step_sec, .step_thr {
+  background: url(../common/step_cellar_addwine.jpg) no-repeat;
+  height: 40px;
+}
+.step {
+  .step_fir {
+    background-position: 0 0;
+  }
+  .step_sec {
+    background-position: 0 -40px;
+  }
+  .step_thr {
+    background-position: 0 -80px;
+  }
+
 }
 
-.sort_search { vertical-align:middle;}
-.sort {float:left;margin:0 15px 0 0;}
-.sort_search .search {float:left;}
+.sort_search {
+  vertical-align: middle;
+}
+.sort {
+  float: left;
+  margin: 0 15px 0 0;
+}
+.sort_search .search {
+  float: left;
+}
 
-.wine_data th, .wine_data td {padding:15px;border-bottom:1px solid #ccc;}
-.wine_data th {background-color:#f3f3f3;font-size:13px;}
-.wine_data td.img, .wine_data td.year , .wine_data td.count, .wine_data td.price, .wine_data td.place{text-align:center;}
-.wine_data td.img {width:50px;}
-.wine_data td.year {width:40px;}
-.wine_data th.des, .wine_data th.info {text-align:left;}
-.wine_data td.des {width:150px;}
-.wine_data td.info {width:150px;}
+.wine_data th, .wine_data td {
+  padding: 15px;
+  border-bottom: 1px solid #ccc;
+}
+.wine_data th {
+  background-color: #f3f3f3;
+  font-size: 13px;
+}
+.wine_data td.img, .wine_data td.year , .wine_data td.count, .wine_data td.price, .wine_data td.place {
+  text-align: center;
+}
+.wine_data td.img {
+  width: 50px;
+}
+.wine_data td.year {
+  width: 40px;
+}
+.wine_data th.des, .wine_data th.info {
+  text-align: left;
+}
+.wine_data td.des {
+  width: 150px;
+}
+.wine_data td.info {
+  width: 150px;
+}
 
-.icon_mail, .icon_like, .icon_add_album, .icon_delet, .icon_edit, .icon_add, .icon_delet2 {background:url(../v2/messages/icon/icon_all.gif) no-repeat;display:inline-block;}
-a.icon_mail {background-position: 0 2px;display:inline-block;padding:0 0 0 20px;}
-a.icon_like {background-position: 0 -16px;padding:0 0 0 20px;}
-a.icon_add_album {background-position: 0 -35px;padding:0 0 0 20px;height:17px;line-height:17px;}
-a.icon_delet {background-position:0 -56px;text-indent: -9999px;height:13px;width:13px;display:inline-block;}
-a.icon_edit {background-position:0 -74px; text-indent:-9999px;height:13px;width:13px;display:inline-block;}
-a.icon_add {background-position:0 -92px; text-indent:-9999px;height:14px;width:14px;display:inline-block;}
-a.icon_delet2 {background-position:0 -115px; text-indent:-9999px;height:13px;width:13px;display:inline-block;}
+.icon_mail, .icon_like, .icon_add_album, .icon_delet, .icon_edit, .icon_add, .icon_delet2 {
+  background: url(../v2/messages/icon/icon_all.gif) no-repeat;
+  display: inline-block;
+}
+a.icon_mail {
+  background-position: 0 2px;
+  display: inline-block;
+  padding: 0 0 0 20px;
+}
+a.icon_like {
+  background-position: 0 -16px;
+  padding: 0 0 0 20px;
+}
+a.icon_add_album {
+  background-position: 0 -35px;
+  padding: 0 0 0 20px;
+  height: 17px;
+  line-height: 17px;
+}
+a.icon_delet {
+  background-position: 0 -56px;
+  text-indent: -9999px;
+  height: 13px;
+  width: 13px;
+  display: inline-block;
+}
+a.icon_edit {
+  background-position: 0 -74px;
+  text-indent: -9999px;
+  height: 13px;
+  width: 13px;
+  display: inline-block;
+}
+a.icon_add {
+  background-position: 0 -92px;
+  text-indent: -9999px;
+  height: 14px;
+  width: 14px;
+  display: inline-block;
+}
+a.icon_delet2 {
+  background-position: 0 -115px;
+  text-indent: -9999px;
+  height: 13px;
+  width: 13px;
+  display: inline-block;
+}
 
-.myform .left {width:500px;float:left;margin-right:20px;}
-.myform .right {float:left;}
+.myform .left {
+  width: 500px;
+  float: left;
+  margin-right: 20px;
+}
+.myform .right {
+  float: left;
+}
 
-.left div {float:left;display:block;margin-bottom:10px;width:500px;}
-.main div {float:left;display:block;margin-bottom:10px;width:680px;}
-#stylized{}
-#stylized h1 {font-size:14px;font-weight:bold;margin-bottom:8px;}
-#stylized .required label span {color:#F00;}
-#stylized label{display:block; font-weight:bold;text-align:right;width:100px;float:left;margin: 0 20px 10px 0;}
-#stylized .small{color:#666666;display:block;font-size:11px;font-weight:normal;text-align:right;width:140px;}
-#stylized input{margin-right:5px;}
-#stylized .content {float:left;width:380px;}
-#stylized .content2 {float:left;width:560px;}
-#stylized button{clear:both;margin-left:150px;width:125px;height:31px;background:#666666 url(img/button.png) no-repeat;text-align:center;line-height:31px;color:#FFFFFF;font-size:11px; font-weight:bold;}
-input.trader, input.name {width:250px;}
-input.price, input.g_type {width:70px;}
-input.count{width:30px;}
-input.year, input.percent  {width:50px;}
-textarea.wine_intro {width:500px;height:200px;}
+.left div {
+  float: left;
+  display: block;
+  margin-bottom: 10px;
+  width: 500px;
+}
+.main div {
+  float: left;
+  display: block;
+  margin-bottom: 10px;
+  width: 680px;
+}
+#stylized {
+}
+#stylized h1 {
+  font-size: 14px;
+  font-weight: bold;
+  margin-bottom: 8px;
+}
+#stylized .required label span {
+  color: #F00;
+}
+#stylized label {
+  display: block;
+  font-weight: bold;
+  text-align: right;
+  width: 100px;
+  float: left;
+  margin: 0 20px 10px 0;
+}
+.cellar_items #stylized  .field_with_errors label.message {
+  display: inline;
+  float: none;
+}
+#stylized .small {
+  color: #666666;
+  display: block;
+  font-size: 11px;
+  font-weight: normal;
+  text-align: right;
+  width: 140px;
+}
+#stylized input {
+  margin-right: 5px;
+}
+#stylized .content {
+  float: left;
+  width: 380px;
+}
+#stylized .content2 {
+  float: left;
+  width: 560px;
+}
+#stylized button {
+  clear: both;
+  margin-left: 150px;
+  width: 125px;
+  height: 31px;
+  background: #666666 url(img/button.png) no-repeat;
+  text-align: center;
+  line-height: 31px;
+  color: #FFFFFF;
+  font-size: 11px;
+  font-weight: bold;
+}
+input.trader, input.name {
+  width: 250px;
+}
+input.price, input.g_type {
+  width: 70px;
+}
+input.count {
+  width: 30px;
+}
+input.year, input.percent {
+  width: 50px;
+}
+textarea.wine_intro {
+  width: 500px;
+  height: 200px;
+}
 
-#hp .title_btn {margin:0 0 30px 0;}
-.title_btn h1 {font-size:18px;}
+#hp .title_btn {
+  margin: 0 0 30px 0;
+}
+.title_btn h1 {
+  font-size: 18px;
+}
 
-.wine_list li {background:url(../v2/messages/bg/wine_search_bg.jpg) no-repeat left top;height:76px;padding:20px 30px;margin:0 0 20px 0;}
-.wine_list .wine_img {float:left;width:70px;margin: 0 20px 0 0;}
-.wine_list .add_to_cellar {float:right;padding: 20px 0 0 0;}
-.wine_list .wine_info {float:left;width:600px;}
-.wine_list .wine_info h2 {font-size:14px;}
-.wine_list .wine_info h3 {font-size:12px;font-weight:normal;color:#666;}
+.wine_list li {
+  background: url(../v2/messages/bg/wine_search_bg.jpg) no-repeat left top;
+  height: 76px;
+  padding: 20px 30px;
+  margin: 0 0 20px 0;
+}
+.wine_list .wine_img {
+  float: left;
+  width: 70px;
+  margin: 0 20px 0 0;
+}
+.wine_list .add_to_cellar {
+  float: right;
+  padding: 20px 0 0 0;
+}
+.wine_list .wine_info {
+  float: left;
+  width: 600px;
+}
+.wine_list .wine_info h2 {
+  font-size: 14px;
+}
+.wine_list .wine_info h3 {
+  font-size: 12px;
+  font-weight: normal;
+  color: #666;
+}
