--- a/app/views/wine_details/share/_owners.html.erb
+++ b/app/views/wine_details/share/_owners.html.erb
@@ -9,12 +9,12 @@
   <div class="item">
     <div class="pic">
       <%= link_to_user cellar_item.user,
-          users_path(cellar_item.user),
+          user_path(cellar_item.user, :trailing_slash => true),
           :with_avatar => true,
           :avatar_version => :middle %>
     </div>
     <div class="text">
-      <h4><%= link_to_user cellar_item.user,  users_path(cellar_item.user) %></h4>
+      <h4><%= link_to_user cellar_item.user,  user_path(cellar_item.user, :trailing_slash => true ) %></h4>
       <p><%= cellar_item.number %>支 | 单价: ¥<%= cellar_item.price %></p>
     </div>
   </div>
