--- a/app/assets/stylesheets/v2/cellar.css.scss
+++ b/app/assets/stylesheets/v2/cellar.css.scss
@@ -1,3 +1,6 @@
+body.cellars {
+  
+
 #cellar {
   .step {
     margin: 0 0 40px 0;
@@ -237,4 +240,6 @@ textarea.wine_intro {
   font-size: 12px;
   font-weight: normal;
   color: #666;
+}
+
 }
