--- a/public/template/css/main.css
+++ b/public/template/css/main.css
@@ -9,6 +9,7 @@ h1.main_title {font-size:18px;}
 li {list-style:none;}
 a {color:#cc3333;text-decoration:none;}
 a:hover {text-decoration:underline;}
+.more a {color:#cc3333;}
 img {border:none;}
 i {color:#ccc;}
 .mr5 {margin-right:5px;}
@@ -17,11 +18,13 @@ i {color:#ccc;}
 .mt20 {margin-top:20px;}
 .mt30 {margin-top:30px;}
 .mb20 {margin-bottom:20px;}
+.mb30 {margin-bottom:30px;}
 .mb40 {margin-bottom:40px;}
 .ptb10 {padding-top:10px;padding-bottom:10px;}
 .pt5 {padding-top:5px;}
 .pt60 {padding-top:60px;}
 .ptb30 {padding-top:30px;padding-bottom:30px;}
+.mainpd {padding:30px 40px;}
 .clearfix:after {clear: both;content: ".";display: block;height: 0;visibility: hidden;}
 .clearfix {display: inline-block;}
 * html .clearfix {height: 1%;}
@@ -34,7 +37,9 @@ textarea, input.text {border:1px solid #ccc;background-color:#f9f9f9;}
 textarea, input {padding:5px;}
 input.radio, input.checkbox{border:none;padding:0;margin:0;vertical-align: ;}
 input.common_search {width:250px;}
-#top_search input.search {padding:2px 5px;width:250px;background-color:#fff;border-radius:5px 0 0 5px;border:1px solid #fff;height:20px;font-size:13px;color:#999;}
+#top_search {background: none repeat scroll 0 0 #fff;box-shadow:inset 0px 1px 2px #666;border-radius: 30px 30px 30px 30px;height: 30px;overflow: hidden;width: 300px;}
+#top_search input.search_btn {float:right;margin:-3px 0 0 0;}
+#top_search input.search {padding:0;margin: 4px 0 4px 10px;width:290px;border:1px solid #fff;height:20px;line-height:20px;font-size:13px;color:#999;}
 #top_search .search_submit {background: -moz-linear-gradient(center top , #e61b23 0%, #9d0a0e 100%) repeat scroll 0 0 transparent;border: 1px solid rgba(0, 0, 0, 0.1);border-bottom-right-radius: 5px;border-top-right-radius: 5px;color: #FFFFFF;top: -1px;line-height: 24px;margin: 0;padding: 5px;position: relative;}
 .float_l {float:left;}
 .float_r {float:right;}
@@ -44,10 +49,13 @@ input.common_search {width:250px;}
 .span550 {width:550px;}
 .span520 {width:520px;}
 .span508 {width:508px;}
-#wrapp950 {width:950px;margin:0 auto;}
-#span950 {width:950px;margin:0 auto;background-color:#fff;box-shadow: 0 1px 3px rgba(34,25,25,0.4);}
+#wrapper950 {width:950px;margin: 0 auto;}
 .min_height { min-height:500px;}
 .align_c {text-align:center;}
+.share_btn {border-top:1px solid #ccc;padding:15px 0 0 0;margin:30px 0 0 0;}
+.share {width:175px;}
+.share img{margin:0 5px 0 0;}
+
 
 /*notice style*/
 .error, .alert, .notice, .success, .information {padding:0.8em;text-align:center;}
@@ -65,8 +73,8 @@ input.common_search {width:250px;}
 .myform .left {width:500px;float:left;margin-right:20px;}
 .myform .right {float:left;}
 /*--------- stylized ---------- */
-.left div {float:left;display:block;margin-bottom:10px;width:500px;} 
-.main div {float:left;display:block;margin-bottom:10px;width:680px;}
+.myform .left div {float:left;display:block;margin-bottom:10px;width:500px;} 
+.myform .main div {float:left;display:block;margin-bottom:10px;width:680px;}
 #stylized{}
 #stylized h1 {font-size:14px;font-weight:bold;margin-bottom:8px;}
 #stylized .required label span {color:#F00;}
@@ -91,10 +99,14 @@ a.icon_delet {background-position:0 -56px;text-indent: -9999px;height:13px;width
 a.icon_edit {background-position:0 -74px; text-indent:-9999px;height:13px;width:13px;display:inline-block;}
 a.icon_add {background-position:0 -92px; text-indent:-9999px;height:14px;width:14px;display:inline-block;}
 a.icon_delet2 {background-position:0 -115px; text-indent:-9999px;height:13px;width:13px;display:inline-block;}
+.icon_fb, .icon_tt, .icon_sina {background:url(../image/icon/sns_link.png) no-repeat;display:inline-block;height:23px;width:23px; text-indent:-9999px;}
+a.icon_fb {background-position: 0 0;}
+a.icon_tt {background-position:-28px 0;}
+a.icon_sina {background-position:-56px 0;}
 
 /*--------------star style---------------*/
-.star_s0, .star_s1, .star_s2, .star_s3, .star_s4, .star_s5 {background:url(../images/star.jpg) no-repeat;display:inline-block;width:65px;height:12px;margin-top:2px;}
-.star_b_s00, .star_b_s05, .star_b_s10, .star_b_s15, .star_b_s20, .star_b_s25, .star_b_s30, .star_b_s35, .star_b_s40, .star_b_s45, .star_b_s50 {background:url(../images/star.jpg) no-repeat;display:inline-block;width:79px;height:14px;}
+.star_s0, .star_s1, .star_s2, .star_s3, .star_s4, .star_s5 {background:url(../image/star.jpg) no-repeat;display:inline-block;width:65px;height:12px;margin-top:2px;}
+.star_b_s00, .star_b_s05, .star_b_s10, .star_b_s15, .star_b_s20, .star_b_s25, .star_b_s30, .star_b_s35, .star_b_s40, .star_b_s45, .star_b_s50 {background:url(../image/star.jpg) no-repeat;display:inline-block;width:79px;height:14px;}
 .star_s5 {background-position: 0 0;}
 .star_s4 {background-position: 0 -24px;}
 .star_s3 {background-position: 0 -48px;}
@@ -123,12 +135,11 @@ a.icon_delet2 {background-position:0 -115px; text-indent:-9999px;height:13px;wid
 .control a {color:#cc3333;}
 .control a:hover {text-decoration:underline;color:#cc3333;}
 .comment_list {margin: 0 0 20px 0;}
-.comment_list li {margin: 0 0 20px 0;padding: 0 0 20px 0;border-bottom:1px solid #eee;}
+.comment_list li {margin: 0 0 10px 0;padding: 0 0 10px 0;}
 .comment_list .userpic, .comment_post .userpic {float:left;margin:0 20px 0 0;}
 .comment_list .username {margin:0 0 3px 0;}
-.comment_list .date {margin:0 0 5px 0;}
 .comment_list .username span {display:inline-block;margin-left:10px;}
-.comment_list .main {float:left;}
+.comment_list .main {float:left;width:520px;}
 .comment_list .reply {padding:3px 5px;margin:0 0 10px 15px;border-left:1px solid #ccc;color:#999;}
 .comment_post {background-color:#f3f3f3;border-radius: 5px 5px 5px 5px;padding:15px;}
 .comment_post .post_main {float:left;width:550px;}
@@ -139,15 +150,18 @@ a.icon_delet2 {background-position:0 -115px; text-indent:-9999px;height:13px;wid
 .data_style1 td {background-color:#f3f3f3;border-right:2px solid #fff;border-bottom:2px solid #fff;padding:2px 10px;}
 
 /*header*/
-#header {background:url(../image/bg/header_bg.png) repeat-x top left; height:53px;color:#fff; position:relative;padding:12px 0 0 0;margin:0 0 20px 0;}
+#header {background:url(../image/bg/header_bg.png) repeat-x top left; height:52px;color:#fff; position:relative;padding-top:8px;}
 #header .main950 {width:950px;margin:0 auto;}
 #header .main860 {width:860px;margin:0 auto;}
-#header #logo {position:absolute;width:270px;}
-#header #top_search {float:left;width:350px;margin:3px 0 0 280px;}
-#header #top_right {float:right;}
-#header #top_right ul li {float:right;}
+#header #logo {width:300px;float:left;}
+#header #top_search {float:left;width:350px;margin:5px 0 0 20px;}
+#header #top_right {float:right;padding-top:5px;}
+#header #top_right ul li {float:right;margin-left:5px;}
 
 /*main space*/
+#span950 {width:950px;margin:0 auto;background-color:#fff;box-shadow: 0 1px 2px 1px #E0E0E0;border:1px solid #dddddd;}
+.whitespace {background-color:#fff;box-shadow: 0 1px 2px 1px #E0E0E0;border:1px solid #dddddd;}
+.whitespace_pd {background-color:#fff;box-shadow: 0 1px 2px 1px #E0E0E0;border:1px solid #dddddd;padding: 30px 40px;}
 #mainspace860 {width:800px;margin:0 auto;background-color:#fff;box-shadow: 0 1px 3px rgba(34,25,25,0.4);padding:30px;}
 #message {width:600px;margin:0 auto;}
 #message h1 {font-size:18px;font-weight:bold;color:#000;}
@@ -176,35 +190,40 @@ ul.private_list li {padding:15px 10px;border-bottom:1px solid #ccc;}
 .talk_r .content {background-color:#f9f9f9;padding:10px;}
 
 /*button style*/
-a.btn_gray, a.btn_gray span, a.btn_gray:hover, a.btn_gray:hover span, a.btn_red_sb, a.btn_red_sb span, a.btn_red_b, a.btn_red_b span, a.btn_blue, a.btn_blue span, a.btn_blue_b, a.btn_blue_b span, a.btn_gray_b, a.btn_gray_b span {background:url(../image/bg/button_bg.jpg) no-repeat;}
-a.btn_add {background:url(../image/bg/button_bg2.png) no-repeat;}
+a.btn_gray, a.btn_gray span, a.btn_gray:hover, a.btn_gray:hover span, a.btn_red_sb, a.btn_red_sb span, a.btn_red_b, a.btn_red_b span, a.btn_blue, a.btn_blue span, a.btn_blue_b, a.btn_blue_b span, a.btn_gray_b, a.btn_gray_b span, a.btn_count, a.btn_count span {background:url(../image/bg/button_bg.jpg) no-repeat;}
 a.btn_gray {background-position:left top;display:inline-block;padding-left:10px;color:#333;text-decoration:none;}
 a.btn_gray span {background-position:right top;display:inline-block;height:25px;line-height:25px;padding-right:10px;}
-a.btn_gray:hover {background-position:left -25px;}
+a.btn_gray:hover {background-position:left -25px;text-decoration:none;}
 a.btn_gray:hover span {background-position:right -25px;}
 a.btn_gray_b {background-position:left -240px;display:inline-block;padding-left:15px;color:#333;text-decoration:none;font-size:14px;}
 a.btn_gray_b span {background-position:right -240px;display:inline-block;height:30px;line-height:30px;padding-right:15px;}
-a.btn_gray_b:hover {background-position:left -270px;}
+a.btn_gray_b:hover {background-position:left -270px;text-decoration:none;}
 a.btn_gray_b:hover span {background-position:right -270px;}
 a.btn_red_sb {background-position:left -50px;display:inline-block;padding-left:20px;color:#fff;text-decoration:none;font-size:16px;}
 a.btn_red_sb span {background-position:right -50px;display:inline-block;height:40px;line-height:40px;padding-right:20px;}
-a.btn_red_sb:hover {background-position:left -90px;}
+a.btn_red_sb:hover {background-position:left -90px;text-decoration:none;}
 a.btn_red_sb:hover span {background-position:right -90px;}
 a.btn_red_b {background-position:left -130px;display:inline-block;padding-left:15px;color:#fff;text-decoration:none;font-size:14px;}
 a.btn_red_b span {background-position:right -130px;display:inline-block;height:30px;line-height:30px;padding-right:15px;}
-a.btn_red_b:hover {background-position:left -160px;}
+a.btn_red_b:hover {background-position:left -160px;text-decoration:none;}
 a.btn_red_b:hover span {background-position:right -160px;}
 a.btn_blue {background-position:left -190px;display:inline-block;padding-left:10px;color:#fff;text-decoration:none;font-size:12px;}
 a.btn_blue span {background-position:right -190px;display:inline-block;height:25px;line-height:25px;padding-right:10px;}
-a.btn_blue:hover {background-position:left -215px;}
+a.btn_blue:hover {background-position:left -215px;text-decoration:none;}
 a.btn_blue:hover span {background-position:right -215px;}
 a.btn_blue_b {background-position:left -300px;display:inline-block;padding-left:15px;color:#fff;text-decoration:none;font-size:14px;}
 a.btn_blue_b span {background-position:right -300px;display:inline-block;height:30px;line-height:30px;padding-right:15px;}
-a.btn_blue_b:hover {background-position:left -330px;}
+a.btn_blue_b:hover {background-position:left -330px;text-decoration:none;}
 a.btn_blue_b:hover span {background-position:right -330px;}
-
-a.btn_add {background-position:0 0;width:62px;height:32px;line-height:30px;display:inline-block;color:#fff;text-decoration:none;padding:0 0 0 10px;font-size:14px;}
-a.btn_add:hover {background-position:left -32px;}
+a.btn_count {background-position:left -360px;display:inline-block;padding-left:15px;color:#7e2831;text-decoration:none;font-size:12px;}
+a.btn_count span {background-position:right -360px;display:inline-block;height:30px;line-height:30px;padding-right:15px;}
+a.btn_add, a.btn_green, a.btn_green span {background:url(../image/bg/button_bg2.gif) no-repeat;}
+a.btn_add {background-position:0 0;width:62px;height:30px;line-height:30px;display:inline-block;color:#fff;text-decoration:none;padding:0 0 0 10px;font-size:14px;}
+a.btn_add:hover {background-position:left -32px;text-decoration:none;}
+a.btn_green {background-position:left -62px;display:inline-block;padding-left:15px;color:#fff;text-decoration:none;font-size:14px;}
+a.btn_green span {background-position:right -62px;display:inline-block;height:30px;line-height:30px;padding-right:15px;}
+a.btn_green:hover {background-position:left -92px;text-decoration:none;}
+a.btn_green:hover span {background-position:right -92px;}
 
 /*------------box style---------------*/
 .wine_list .wine_info h2, .addwine .box .wine_info h2 {font-size:14px;}
@@ -219,4 +238,6 @@ div.pagination span.current {padding-right: 6px; padding-left: 6px; font-weight:
 div.pagination span.disabled {padding-right: 6px; padding-left: 6px; padding-bottom: 2px; color: #adaaad; margin-right: 3px; padding-top: 2px}
 
 /*footer*/
-#footer {text-align:center;margin:20px 0 30px 0;color:#999;}
+#footer {width:950px;margin: 30px auto;text-align:center;color:#999}
+#footer a {color:#999;text-decoration:none;}
+#footer a:hover {color:#999;text-decoration:underline;}
