--- a/app/assets/stylesheets/v2/wine_profile.css.scss
+++ b/app/assets/stylesheets/v2/wine_profile.css.scss
@@ -57,6 +57,7 @@ $text_color_grey: #333;
         }
     }
     .left {
+        background: #FFF;
         .box {
             padding-left: 20px;
         }
