--- a/app/views/wine_details/share/_followers.html.erb
+++ b/app/views/wine_details/share/_followers.html.erb
@@ -8,7 +8,7 @@
 <% @followers.each do |user| %>
   <div class="item">
       <%= link_to_user user,
-                       users_path(user),
+                       user_path(user, :trailing_slash => true),
                        :with_avatar => true,
                        :avatar_version => :middle %>
   </div>
