--- a/app/assets/stylesheets/base.css.scss
+++ b/app/assets/stylesheets/base.css.scss
@@ -1,5 +1,5 @@
 body {
-    background-color: #F5F5F5;
+    background: url("body_bg.jpg") repeat-x repeat-y;
     color: #666666;
     font-family: Arial,Helvetica,sans-serif;
     font-size: 12px;
