--- a/app/assets/stylesheets/v2/base.css
+++ b/app/assets/stylesheets/v2/base.css
@@ -1,5 +1,5 @@
 body {
-  background-color: #F5F5F5;
+  background: #EEE url('body_bg.jpg') repeat  left top;
   color: #666666;
   font-family: Arial,Helvetica,sans-serif;
   font-size: 12px;
