--- a/app/views/mine/share/_favorite_wines.html.erb
+++ b/app/views/mine/share/_favorite_wines.html.erb
@@ -1,11 +1,14 @@
-
+<% unless @cellar_items.nil? %>
+<% @cellar_items.each_with_index do |item, index| %>
+<% if index < 2 %>
 <div class="large_list">
-  <%= link_to (image_tag "v2/test/m_w_1.png", :align => "left" ), :controller => "items", :action => "edit", :id => @item %>
-  <%= link_to (image_tag "v2/test/m_w_1.png", :align => "left" ), :controller => "items", :action => "edit", :id => @item %>
+	<%= link_to wine_cover_tag(item.wine_detail, :thumb_name => :w_thumb, :align => "left", :width => 203, :height => 203), wine_path(item.wine_detail) %>
 </div>
-
+<% else %>
 <div class="small_list">
-<% (2..5).each do |i| %>
-  <%= link_to (image_tag "v2/test/m_w_2.png", :align => "center"), :controller => "items", :action => "edit", :id => @item %>
-<% end %>
+	<%= link_to wine_cover_tag(item.wine_detail, :thumb_name => :w_thumb, :align => "left", :width => 100, :height => 100), wine_path(item.wine_detail) %>	
 </div>
+<% end %>
+<% end %>
+<% end %>
+
