--- a/app/views/mine/share/_user_followers.html.erb
+++ b/app/views/mine/share/_user_followers.html.erb
@@ -5,9 +5,10 @@
       <%= link_to_user user, user_path(user.id, :trailing_slash => true), :with_avatar => true, :avatar_version => :thumb, :class => "w_50" %>
     </div>
     <h4> <%= user.username %> </h4>
-    <% if current_user.is_following friendship.follower_id %>
+
+    <% if current_user.is_following user.id %>
       <p> 互相关注 </p>
-      <p> <%= link_to "取消关注", '/friends/unfollower?user_id='+friendship.follower_id.to_s %> </p>
+      <p> <%= link_to "取消关注", '/friends/unfollow?user_id='+user.id.to_s %> </p>
     <% end %>
   </div>
 <% end %>
