--- a/app/views/wine_details/share/_followers_list.erb
+++ b/app/views/wine_details/share/_followers_list.erb
@@ -2,7 +2,7 @@
 <% @followers.each do |user| %>
   <div class="item">
     <div class="pic">
-      <%= link_to_user user, user_path(user), :with_avatar => true, :avatar_version => :middle %>
+      <%= link_to_user user, user_path(user, :trailing_slash => true), :with_avatar => true, :avatar_version => :middle %>
     </div>
     <h4> <%= user.username %> </h4>
     <p> <%#= user.profile.get_living_city %></p>
