--- a/public/template/header_login.html
+++ b/public/template/header_login.html
@@ -17,10 +17,12 @@
             </div>
             <div id="top_right">
             	<ul>
-                	<li class="userbox">user</li>
+                	<li class="userbox">
+                    	<a class="userpic" href="#"><img src="image/userimage/06.jpg" width="20" height="20" /></a><a href="#"><img src="image/common/userbox_arrow.jpg" width="22" height="30" /></a>
+                    </li>
                     <li class="top_add"><a href="#" class="btn_add">添加</a></li>
                 </ul>
-            </div>
+</div>
             <div class="clear"></div>
         </div>
     </div>
